<resources>
    <string name="app_name">Projeto Estoque</string>
    <!--
    strings do APP
    -->
    <string name="list_produtos">Listar Produtos</string>
    <string name="vender">Vender Produto</string>
    <string name="cadastrar_novo">Cadastrar Novo Produto</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="obrigatorio">Campos Obrigatorios *</string>
    <string name="produto_nome">Nome do Produto *</string>
    <string name="produto_preco">Preço do Produto *</string>
    <string name="produto_qtd">Quantidade de Estoque do Produto *</string>
    <string name="campos">Todos os Campos são Obrigatorios</string>
    <string name="venda_produto">item vendido</string>
    <string name="venda_indisponivel">Produto não disponivel no estoque</string>
    <string name="deletado">Produto deletado</string>
    <string name="deletar">deletar</string>
    <string name="venda">vender</string>
    <string name="alterar">Alterar</string>
    <string name="incompleto">incompleto</string>
    <string name="produtosvendidos">Listar Produtos Vendidos</string>
</resources>
