<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProjetoEstoque">
    <TextView
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnCadastrar"
        android:textSize="13sp"
        android:layout_marginTop="30dp"
        android:text="@string/cadastrar_novo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnVender"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:text="@string/vender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnListar"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:text="@string/list_produtos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
